--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,4 +19,12 @@
     <string name="send_report">Enviar el informe del crimen a través de</string>
     <string name="item_crime_title">Título del crimen</string>
     <string name="item_crime_date">Fecha del crimen</string>
+    <string name="crime_photo_button_description">
+ Tomar foto de la escena del crimen
+ </string>
+    <string name="crime_photo_no_image_description">
+ Foto de la escena del crimen (no establecida)
+ </string>
+    <string name="crime_photo_image_description">
+        Foto de la escena del crimen (establecida) </string>
 </resources>
